=================== Release 1.0 2017-05-07 =====================
Description
    * First version of the App.
Functionalities
    * All declared in the rules of the method.
Changes
    * Version 1.0 Build 05 (2017/05/09)
        * Made the App universal. (2017/05/09)
    * Version 1.0 Build 04 (2017/05/08)
        * Modifications to the rules. (2017/05/08)
    * Version 1.0 Build 03 (2017/05/07)
        * Dummy version. No changes. (2017/05/07)
    * Version 1.0 Build 02 (2017/05/07)
        * Corrected bug in the task's migration system. And some Auto-Layout corrections with some menu items. (2017/05/07)
        * Undoed last correction with the *FirstDay* status. (2017/05/07)
        * Minor correction with the *FirstDay* status. Now it spans the entire first day. (2017/05/06)
    * Version 1.0 Build 01 (2017/05/06) - RELEASE CANDIDATE
        * Added support for the Rules' view. (2017/05/05)
        * Disabled Changes' view. (2017/05/05)
        * L&F modifications. (2017/05/05)
        * Minor modifications. (2017/05/03)
        * Minor modifications. (2017/05/02)
        * Added support for *About* view. (2017/04/23)
        * Performance upgrade to the task's table. Removed unnecessary reloads. (2017/04/20)
        * Improved the custom keyboard toolbar. (2017/04/19)
        * Added base support for XCUITest. (2017/04/19)
        * Mayor corrections. (2017/04/19)
        * Corrected a bug in sanity checks #1. (2017/04/16)
        * Migrated the statistical graph to the user's view. (2017/04/16)
        * Corrected minor bug with the task's table. (2017/04/15)
        * Corrected a minor bug with the notification system. (2017/04/15)
        * Added support for showing if tomorrow is set or not in the project's table. (2017/04/12)
        * Improved support for the table caching system. (2017/04/12)
        * Added support for sorting projects by use (Default). (2017/04/11)
        * Added support for Fabric and Crashlytics. (2017/04/10)