@@ -5,6 +5,7 @@ Functionalities
     * All declared in the rules of the method.
 Changes
     * Version 1.0 Build 05 (2017/05/09)
+        * Minor corrections to the iCloud access. (2017/05/09)
         * Made the App universal. (2017/05/09)
     * Version 1.0 Build 04 (2017/05/08)
         * Modifications to the rules. (2017/05/08)
